# cheatbind

./: CLAUDE.md  PKGBUILD  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml  update-pkgbuild.yml
src/cheatbind/: __init__.py  config.py  main.py
src/cheatbind/parsers/: base.py  niri.py  zsh.py
src/cheatbind/style/: cheatsheet.css
src/cheatbind/ui/: keybinds.py  keyboard_key.py  overlay.py
tests/: test_parser_niri.py  test_parser_zsh.py
